--- a/BizplayReceipt/View/MyReceipt/MyReceiptSB.storyboard
+++ b/BizplayReceipt/View/MyReceipt/MyReceiptSB.storyboard
@@ -154,7 +154,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4EX-gn-SOX">
-                                <rect key="frame" x="0.0" y="44" width="414" height="760"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="PjZ-G8-Y7t">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="34"/>
@@ -184,31 +184,44 @@
                                     </constraints>
                                 </view>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="egM-o9-5NH">
-                                    <rect key="frame" x="0.0" y="351" width="414" height="425"/>
+                                    <rect key="frame" x="0.0" y="351" width="414" height="463"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mmg-8J-Rq8">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="20"/>
                                             <color key="backgroundColor" red="0.92549019607843142" green="0.93725490196078431" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="20" id="TJg-Lp-G5C"/>
+                                                <constraint firstAttribute="height" constant="20" id="i7Z-dX-HXN"/>
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="사진" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Te-UZ-uEx">
                                             <rect key="frame" x="20" y="28" width="26" height="18"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="26" id="QqK-X2-aHq"/>
-                                                <constraint firstAttribute="height" constant="18" id="T0q-zs-MPm"/>
-                                            </constraints>
                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
                                             <color key="textColor" red="0.64313725489999995" green="0.64313725489999995" blue="0.64313725489999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Woe-jP-PdA">
+                                            <rect key="frame" x="0.0" y="413" width="414" height="50"/>
+                                            <color key="backgroundColor" red="0.25882352939999997" green="0.52549019610000003" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="QrU-SI-FKh"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                            <state key="normal" title="저장하기">
+                                                <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                            </state>
+                                        </button>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oKB-lP-A0r">
-                                            <rect key="frame" x="54" y="28" width="340" height="357"/>
+                                            <rect key="frame" x="56" y="28" width="338" height="300"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="300" id="IHN-QG-Gfy"/>
+                                            </constraints>
                                         </imageView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uzn-XW-QHb">
-                                            <rect key="frame" x="54" y="28" width="340" height="357"/>
+                                            <rect key="frame" x="56" y="28" width="338" height="300"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="300" id="4CN-lC-evY"/>
+                                            </constraints>
                                             <state key="normal" image="bigCameraIcon"/>
                                             <connections>
                                                 <action selector="cameraOrPhotoClicker:" destination="Iai-9K-o8i" eventType="touchUpInside" id="N8n-Qj-DF0"/>
@@ -217,19 +230,20 @@
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="oKB-lP-A0r" secondAttribute="trailing" constant="20" symbolic="YES" id="9dl-bW-hfR"/>
-                                        <constraint firstItem="Uzn-XW-QHb" firstAttribute="top" secondItem="Mmg-8J-Rq8" secondAttribute="bottom" constant="8" id="CYB-hQ-boW"/>
-                                        <constraint firstAttribute="trailing" secondItem="Uzn-XW-QHb" secondAttribute="trailing" constant="20" symbolic="YES" id="EGC-TG-WYP"/>
-                                        <constraint firstItem="Uzn-XW-QHb" firstAttribute="leading" secondItem="3Te-UZ-uEx" secondAttribute="trailing" constant="8" symbolic="YES" id="Suo-RK-1Sf"/>
-                                        <constraint firstAttribute="bottom" secondItem="oKB-lP-A0r" secondAttribute="bottom" constant="40" id="Ulh-67-AyH"/>
-                                        <constraint firstItem="oKB-lP-A0r" firstAttribute="top" secondItem="Mmg-8J-Rq8" secondAttribute="bottom" constant="8" id="XPa-pU-KUM"/>
-                                        <constraint firstItem="Mmg-8J-Rq8" firstAttribute="top" secondItem="egM-o9-5NH" secondAttribute="top" id="aX4-Ky-VfV"/>
-                                        <constraint firstItem="oKB-lP-A0r" firstAttribute="leading" secondItem="3Te-UZ-uEx" secondAttribute="trailing" constant="8" symbolic="YES" id="bDW-Xt-uaB"/>
-                                        <constraint firstItem="Mmg-8J-Rq8" firstAttribute="leading" secondItem="egM-o9-5NH" secondAttribute="leading" id="bG3-F0-ZXT"/>
-                                        <constraint firstItem="3Te-UZ-uEx" firstAttribute="leading" secondItem="egM-o9-5NH" secondAttribute="leading" constant="20" symbolic="YES" id="dHn-o4-t9z"/>
-                                        <constraint firstAttribute="bottom" secondItem="Uzn-XW-QHb" secondAttribute="bottom" constant="40" id="efl-4Q-JP4"/>
-                                        <constraint firstAttribute="trailing" secondItem="Mmg-8J-Rq8" secondAttribute="trailing" id="fLx-fz-gdA"/>
-                                        <constraint firstItem="3Te-UZ-uEx" firstAttribute="top" secondItem="Mmg-8J-Rq8" secondAttribute="bottom" constant="8" id="qGr-V3-dEK"/>
+                                        <constraint firstAttribute="bottom" secondItem="Woe-jP-PdA" secondAttribute="bottom" id="3qf-3q-Xcp"/>
+                                        <constraint firstItem="3Te-UZ-uEx" firstAttribute="leading" secondItem="egM-o9-5NH" secondAttribute="leading" constant="20" id="5Yh-pf-wRP"/>
+                                        <constraint firstItem="oKB-lP-A0r" firstAttribute="top" secondItem="Mmg-8J-Rq8" secondAttribute="bottom" constant="8" id="FyF-cj-b0N"/>
+                                        <constraint firstItem="Uzn-XW-QHb" firstAttribute="leading" secondItem="3Te-UZ-uEx" secondAttribute="trailing" constant="10" id="G2m-Yg-APj"/>
+                                        <constraint firstItem="Woe-jP-PdA" firstAttribute="leading" secondItem="egM-o9-5NH" secondAttribute="leading" id="Jrh-3j-4a6"/>
+                                        <constraint firstAttribute="trailing" secondItem="oKB-lP-A0r" secondAttribute="trailing" constant="20" id="KoS-Kj-KUg"/>
+                                        <constraint firstAttribute="trailing" secondItem="Woe-jP-PdA" secondAttribute="trailing" id="Ox3-6Z-Bh4"/>
+                                        <constraint firstItem="3Te-UZ-uEx" firstAttribute="top" secondItem="Mmg-8J-Rq8" secondAttribute="bottom" constant="8" id="QmZ-Zu-KV4"/>
+                                        <constraint firstItem="Mmg-8J-Rq8" firstAttribute="top" secondItem="egM-o9-5NH" secondAttribute="top" id="Qzf-RM-ALH"/>
+                                        <constraint firstItem="Uzn-XW-QHb" firstAttribute="top" secondItem="Mmg-8J-Rq8" secondAttribute="bottom" constant="8" id="aV2-jJ-6m9"/>
+                                        <constraint firstAttribute="trailing" secondItem="Uzn-XW-QHb" secondAttribute="trailing" constant="20" id="amq-1c-eae"/>
+                                        <constraint firstAttribute="trailing" secondItem="Mmg-8J-Rq8" secondAttribute="trailing" id="cvx-fh-vPY"/>
+                                        <constraint firstItem="oKB-lP-A0r" firstAttribute="leading" secondItem="3Te-UZ-uEx" secondAttribute="trailing" constant="10" id="fxs-pb-afj"/>
+                                        <constraint firstItem="Mmg-8J-Rq8" firstAttribute="leading" secondItem="egM-o9-5NH" secondAttribute="leading" id="gfZ-ft-BjO"/>
                                     </constraints>
                                 </view>
                                 <prototypes>
@@ -458,20 +472,11 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Woe-jP-PdA">
-                                <rect key="frame" x="0.0" y="812" width="414" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.25882352939999997" green="0.52549019610000003" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                <state key="normal" title="저장하기">
-                                    <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
-                                </state>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="4EX-gn-SOX" firstAttribute="top" secondItem="rHl-oj-LjM" secondAttribute="top" id="59K-cZ-X2h"/>
-                            <constraint firstItem="rHl-oj-LjM" firstAttribute="bottom" secondItem="4EX-gn-SOX" secondAttribute="bottom" constant="58" id="GLW-Zu-1TP"/>
+                            <constraint firstItem="rHl-oj-LjM" firstAttribute="bottom" secondItem="4EX-gn-SOX" secondAttribute="bottom" id="GLW-Zu-1TP"/>
                             <constraint firstItem="rHl-oj-LjM" firstAttribute="trailing" secondItem="4EX-gn-SOX" secondAttribute="trailing" id="QNa-EQ-E9f"/>
                             <constraint firstItem="4EX-gn-SOX" firstAttribute="leading" secondItem="rHl-oj-LjM" secondAttribute="leading" id="r5Z-dA-g9u"/>
                         </constraints>
@@ -534,14 +539,14 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="UseListCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="UseListCell" id="bZj-SF-6yC" customClass="UseListCell" customModule="BizplayReceipt" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bZj-SF-6yC" id="kU9-Ak-wxN">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEk-9C-1AF">
-                                                    <rect key="frame" x="20" y="11" width="165" height="21.5"/>
+                                                    <rect key="frame" x="20" y="11" width="165" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="165" id="xg5-x4-bIk"/>
                                                     </constraints>
@@ -561,14 +566,14 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="UseUsageCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="UseUsageCell" id="Sda-kN-VFH" customClass="UseUsageCell" customModule="BizplayReceipt" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="71.5" width="414" height="43"/>
+                                        <rect key="frame" x="0.0" y="71" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Sda-kN-VFH" id="68c-yc-wqE">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k9D-PQ-4tL">
-                                                    <rect key="frame" x="20" y="11" width="165" height="21"/>
+                                                    <rect key="frame" x="20" y="11" width="165" height="21.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="165" id="g5q-n1-rVN"/>
                                                     </constraints>
