--- a/BizplayReceipt/View/MyReceipt/MyReceiptSB.storyboard
+++ b/BizplayReceipt/View/MyReceipt/MyReceiptSB.storyboard
@@ -184,7 +184,7 @@
                                     </constraints>
                                 </view>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="egM-o9-5NH">
-                                    <rect key="frame" x="0.0" y="351" width="414" height="463"/>
+                                    <rect key="frame" x="0.0" y="351" width="414" height="602"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mmg-8J-Rq8">
@@ -201,7 +201,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Woe-jP-PdA">
-                                            <rect key="frame" x="0.0" y="413" width="414" height="50"/>
+                                            <rect key="frame" x="0.0" y="552" width="414" height="50"/>
                                             <color key="backgroundColor" red="0.25882352939999997" green="0.52549019610000003" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="50" id="QrU-SI-FKh"/>
@@ -475,10 +475,10 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="4EX-gn-SOX" firstAttribute="top" secondItem="rHl-oj-LjM" secondAttribute="top" id="59K-cZ-X2h"/>
-                            <constraint firstItem="rHl-oj-LjM" firstAttribute="bottom" secondItem="4EX-gn-SOX" secondAttribute="bottom" id="GLW-Zu-1TP"/>
-                            <constraint firstItem="rHl-oj-LjM" firstAttribute="trailing" secondItem="4EX-gn-SOX" secondAttribute="trailing" id="QNa-EQ-E9f"/>
-                            <constraint firstItem="4EX-gn-SOX" firstAttribute="leading" secondItem="rHl-oj-LjM" secondAttribute="leading" id="r5Z-dA-g9u"/>
+                            <constraint firstItem="4EX-gn-SOX" firstAttribute="trailing" secondItem="rHl-oj-LjM" secondAttribute="trailing" id="CwZ-yy-PKB"/>
+                            <constraint firstItem="4EX-gn-SOX" firstAttribute="top" secondItem="rHl-oj-LjM" secondAttribute="top" id="LOa-0z-t0g"/>
+                            <constraint firstItem="4EX-gn-SOX" firstAttribute="bottom" secondItem="rHl-oj-LjM" secondAttribute="bottom" id="d8e-IT-7xe"/>
+                            <constraint firstItem="4EX-gn-SOX" firstAttribute="leading" secondItem="rHl-oj-LjM" secondAttribute="leading" id="yVZ-uN-dqE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rHl-oj-LjM"/>
                     </view>
@@ -663,7 +663,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4eE-5v-5x0">
-                                                    <rect key="frame" x="385" y="38" width="24" height="24"/>
+                                                    <rect key="frame" x="361" y="38" width="48" height="48"/>
                                                     <state key="normal" image="icoSeemore"/>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="l  CompanyNm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ko-Ms-3kR">
@@ -688,7 +688,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7sa-fx-POx">
-                                                    <rect key="frame" x="311.5" y="39.5" width="70.5" height="20.5"/>
+                                                    <rect key="frame" x="287.5" y="39.5" width="70.5" height="20.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44.5" id="zil-vv-MOg"/>
                                                     </constraints>
@@ -747,7 +747,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X7h-Gj-mWw">
-                                                    <rect key="frame" x="383" y="11" width="24" height="24"/>
+                                                    <rect key="frame" x="359" y="11" width="48" height="24"/>
                                                     <state key="normal" image="icoSeemore"/>
                                                 </button>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yow-as-xfp">
@@ -758,7 +758,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="영수증 내용 입력하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tbF-jF-5dS">
-                                                    <rect key="frame" x="274.5" y="15" width="100.5" height="14"/>
+                                                    <rect key="frame" x="250.5" y="15" width="100.5" height="14"/>
                                                     <fontDescription key="fontDescription" name="Arial-ItalicMT" family="Arial" pointSize="12"/>
                                                     <color key="textColor" red="0.25882352939999997" green="0.52549019610000003" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
